update legal to include. Fix social sharing on mobile

--- a/src/less/header.less
+++ b/src/less/header.less
@@ -16,6 +16,13 @@ ul.social {
   }
 }
 
+li.small-social {
+  margin-top: 12px;
+  > a {
+  display: inline !important;
+  }
+}
+
 .navbar {
   border-color: #ddd;
   .box-shadow(0 0 13px rgba(0,0,0,0.1));
